# product-pipeline

./: .gitignore  AUTONOMOUS_MODE.md  BANKR_INTEGRATION.md  ENHANCED_DESIGN_SYSTEM.md  HEARTBEAT.md  IDENTITY.md  README.md  agent-media-plan.md  agent-wire-scaffold.md  agentic-media-alternatives.md  agentic-media-design.md  eli5ai-implementation.md  eli5defi_strategy_analysis.md  event_calendar_feb_23_28_2026.md  events-calendar-feb-23-28-2026.md  github-explorer-tom-doerr-2026-02-23-22-03.md  github_explorer_2025-02-21-2338.md  github_explorer_2025-02-21-2354.md  ios-crypto-app-research.md  morning_briefing_2026-02-22.md  obsidian_export.md  obsidian_techagents_github_explorer_tom_doerr_2026-02-22-16-01.md  package-lock.json  polymarket_wallet_analysis.md  product-pipeline.md  vibeanalytics_launch_content.md  vibecoding-strategy.md  voidborne_content_calendar.md
ai-vc-firm/: QUICKSTART.md  (+2 more)
polymarket-btc-bot/: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README-CLAUDE.md  README.md  SETUP.md  claude-setup.sh  debug-api.sh  deploy.sh  docker-compose.yml  install.sh  run.sh  test-credentials.sh  test-json.sh
polymarket-btc-bot/config/: development.yaml  production.yaml
polymarket-btc-bot/dashboard/src/: main.rs
polymarket-btc-bot/monitoring/: prometheus.yml
polymarket-btc-bot/src/: main.rs
polymarket-btc-bot/src/config/: mod.rs
polymarket-btc-bot/src/dashboard/: dashboard.rs
polymarket-btc-bot/src/exchange/: binance.rs  polymarket.rs
polymarket-btc-bot/src/pricing/: black_scholes.rs
polymarket-btc-bot/terraform/: main.tf  user_data.sh
(+284 files in other folders)
